Fixed some SEO tags and centered the main text on mobile res

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ section {
     width: 220px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 
 .bottom-icon {
